# pukeko

./: .envrc  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell-checkin.yaml  .stylish-haskell.yaml  .travis.yml  HISTORY  LICENSE  README.md  TODO  corelang.cabal  gc.c  naming.md  package.yaml  pukeko.cabal  runtime.inc  snapshot.yaml  stack.yaml  test.cl
.travis/: setup.sh
app/: Main.hs
examples/: Makefile  catalan.bench  catalan.pu  fibs.pu  fix.pu  hello.pu  isort.bench  isort.pu  isort.ruceki.bench  monad_io.pu  primes.pu  qsort.bench  qsort.pu  qsort.ruceki.bench  queens.bench  queens.mono.bench  queens.pu  queens.ruceki.bench  rev.pu  rmq.pu  rmq_gen.pu  std2  tsort.bench  wildcard.pu
gm/: Makefile  gm.cc
src/: Pukeko.hs
src/Control/: Bilens.hs
src/Control/Lens/: Freer.hs
src/Control/Monad/: Supply.hs
src/Control/Monad/Freer/: Supply.hs
src/CoreLang/: Demo.hs  Optimizer.hs  Parser.hs  Pretty.hs  Syntax.hs
src/CoreLang/GMachine/: Builtins.hs  Compiler.hs  GCode.hs  Machine.hs  NASM.hs
src/CoreLang/Language/: Builtins.hs  Ident.hs  LambdaLifter.hs  Mark1.hs  Mark2.hs  Mark3.hs  Mark4.hs  Mark5.hs  Operator.hs  Optimizer.hs  Parser.hs  Rewrite.hs  Subst.hs  Supply.hs  Syntax.hs  Term.hs  Transform.hs  Type.hs  TypeChecker.hs
src/CoreLang/Monomorphic/: Builtins.hs  Checker.hs  Inferrer.hs  Subtyping.hs  TypeChecker.hs
src/CoreLang/Polymorphic/: Builtins.hs  TypeChecker.hs
src/CoreLang/TempInst/: Builtins.hs  GC.hs  Instantiate.hs  Interpreter.hs  Machine.hs  Stats.hs  TIM.hs
src/Data/: Finite.hs  Forget.hs
src/Data/List/: NE.hs  Sized.hs
src/Data/Map/: Extended.hs
src/Data/Vector/: Sized.hs
src/Pukeko/: BackEnd.hs  Demo.hs  Error.hs  FrontEnd.hs  MiddleEnd.hs  Orphans.hs  Pos.hs  Prelude.hs  Pretty.hs  SystemF.hs
src/Pukeko/AST/: Classes.hs  ConDecl.hs  Dict.hs  Expr.hs  Functor2.hs  Identifier.hs  Language.hs  ModuleInfo.hs  Name.hs  NoLambda.hs  Operator.hs  Pos.hs  Scope.hs  Stage.hs  SuperCore.hs  Surface.hs  SystemF.hs  Type.hs  Unwind.hs
src/Pukeko/AST/Expr/: Optics.hs
src/Pukeko/BackEnd/: Builtins.hs  Compiler.hs  GCode.hs  Info.hs  NASM.hs  PeepHole.hs
src/Pukeko/Core/: Info.hs  Syntax.hs
src/Pukeko/FrontEnd/: ClassEliminator.hs  FunResolver.hs  Gamma.hs  Inferencer.hs  Info.hs  KindChecker.hs  Parser.hs  PatternMatcher.hs  Renamer.hs  TypeChecker.hs
src/Pukeko/FrontEnd/Inferencer/: Gamma.hs  (+3 more)
src/Pukeko/Frontend/: FunResolver.hs  Gamma.hs  Inferencer.hs  Info.hs  KindChecker.hs  PatternMatcher.hs  Renamer.hs  TypeChecker.hs  TypeResolver.hs
src/Pukeko/GMachine/: Builtins.hs  Compiler.hs  GCode.hs  NASM.hs  PeepHole.hs
src/Pukeko/Language/: ADT.hs  AliasInliner.hs  Builtins.hs  ConInfo.hs  CoreCompiler.hs  DeBruijner.hs  DeadCode.hs  EtaReducer.hs  FreeVars.hs  FunResolver.hs  Gamma.hs  Ident.hs  Inferencer.hs  Info.hs  KindChecker.hs  LambdaLifter.hs  Mark1.hs  Mark2.hs  Mark3.hs  Mark4.hs  Mark5.hs  Operator.hs  Optimizer.hs  Parser.hs  PatternMatcher.hs  Prettifier.hs  Renamer.hs  Rewrite.hs  Syntax.hs  Term.hs  Type.hs  TypeChecker.hs  TypeEraser.hs  TypeResolver.hs
src/Pukeko/MiddleEnd/: AliasInliner.hs  CallGraph.hs  DeadCode.hs  EtaReducer.hs  Inliner.hs  LambdaLifter.hs  Prettifier.hs  TypeEraser.hs
src/Pukeko/Monomorphic/: Builtins.hs  Checker.hs  Inferrer.hs  Subtyping.hs
src/Pukeko/TempInst/: Builtins.hs  GC.hs  Instantiate.hs  Interpreter.hs  Machine.hs  Stats.hs  TIM.hs
stdlib/std2/: bag.pu  basic.pu  bintree.pu  bool.pu  char.pu  int.pu  io.pu  list.pu  monad.pu  num.pu  pair.pu  prelude.pu
test/: .#Reject.hs  Examples.hs  FrontEnd.hs  Golden.hs  GoldenFrontEnd.hs  Makefile  Reject.hs  RunExamples.hs  Spec.hs  aliasinline.asm  aliasinline.ll  aliasinline.pl  aliasinline.pu  aliasinline.ti  catalan.asm  catalan.bench  catalan.ll  catalan.mono.bench  catalan.out  catalan.pl  catalan.pu  catalan.ti  catalan_spec.hs  fibs.asm  fibs.ll  fibs.out  fibs.pl  fibs.pu  fibs.ti  fibs93.cl  fibs93.out  fibs_spec.hs  fix.asm  fix.ll  fix.pl  fix.pu  fix.ti  frontend.pu  hello.asm  hello.pl  (+83 more)
test/backend/examples/: cat.golden  catalan.golden  fibs.golden  fix.golden  hello.golden  isort.golden  monad_io.golden  primes.golden  qsort.golden  queens.golden  rev.golden  rmq.golden  rmq_gen.golden  sort_gen.golden  tsort.golden  wildcard.golden
test/backend/indexer/: let-rec.golden  let-rec.pu  let.golden  let.pu
test/frontend/examples/: catalan.golden  fibs.golden  fix.golden  hello.golden  isort.golden  monad_io.golden  primes.golden  qsort.golden  queens.golden  rev.golden  rmq.golden  rmq_gen.golden  sort_gen.golden  tsort.golden  wildcard.golden
test/frontend/kind-checker/: inconsistent-kinds-one.golden  inconsistent-kinds-one.pu  inconsistent-kinds-three.golden  inconsistent-kinds-three.pu  occurs.golden  occurs.pu  over-app-func-decl.golden  over-app-func-decl.pu  over-app-rec.golden  over-app-rec.pu  over-app-two.golden  over-app-two.pu  under-app-func-decl.golden  under-app-func-decl.pu  under-app-rec.golden  under-app-rec.pu  under-app-two.golden  under-app-two.pu
test/frontend/pattern-matcher/: good-nested.golden  good-nested.pu  no-rule-nested.golden  no-rule-nested.pu  no-rule-simple.golden  no-rule-simple.pu  not-exhaust-nested.golden  not-exhaust-nested.pu  not-exhaust-simple.golden  not-exhaust-simple.pu  overlap-nested.golden  overlap-nested.pu  overlap-simple.golden  overlap-simple.pu  too-simple-term-con.golden  too-simple-term-con.pu  too-simple-var.golden  too-simple-var.pu
test/middleend/examples/: catalan.golden  fibs.golden  fix.golden  hello.golden  isort.golden  monad_io.golden  primes.golden  qsort.golden  queens.golden  rev.golden  rmq.golden  rmq_gen.golden  sort_gen.golden  tsort.golden  wildcard.golden
test/middleend/inliner/: alias-chain.golden  alias-chain.pu  nested-lambdas.golden  nested-lambdas.pu
test/std/: basic.pu  bool.pu  choice.pu  int.pu  io.pu  list.pu  option.pu  prelude.pu  tree.pu
test/std2/: bag.pu  basic.pu  bintree.pu  bool.pu  char.pu  foldable.pu  functor.pu  int.pu  io.pu  list.pu  monad.pu  monoid.pu  num.pu  ord.pu  pair.pu  prelude.pu
(+110 files in other folders)
