name:                corelang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/corelang#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Huschenbett
maintainer:          martin.huschenbett@posteo.me
copyright:           2017 Martin Huschenbett
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CoreLang.Language.Mark1
                     , CoreLang.Language.Mark2
                     , CoreLang.Language.Mark3
                     , CoreLang.Language.Mark4
                     , CoreLang.Language.Optimizer
                     , CoreLang.Language.Parser
                     , CoreLang.Language.Syntax
  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
                     , parsec
                     , pretty
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , NamedFieldPuns
  ghc-options:         -Wall -Wno-missing-signatures -Wno-name-shadowing -Werror

executable corelang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , corelang
  default-language:    Haskell2010

test-suite corelang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , corelang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/corelang
