name:                corelang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/corelang#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Huschenbett
maintainer:          martin.huschenbett@posteo.me
copyright:           2017 Martin Huschenbett
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Supply
                     , CoreLang.Demo
                     , CoreLang.GMachine.Builtins
                     , CoreLang.GMachine.Compiler
                     , CoreLang.GMachine.GCode
                     , CoreLang.Language.Ident
                     , CoreLang.Language.LambdaLifter
                     , CoreLang.Language.Operator
                     , CoreLang.Language.Parser
                     , CoreLang.Language.Rewrite
                     , CoreLang.Language.Syntax
                     , CoreLang.Language.Term
                     , CoreLang.Language.Type
                     , CoreLang.Monomorphic.Builtins
                     , CoreLang.Monomorphic.Checker
                     , CoreLang.Monomorphic.Subtyping
                     , CoreLang.Polymorphic.Builtins
                     , CoreLang.Polymorphic.TypeChecker
                     , CoreLang.Pretty
--                     , CoreLang.TempInst.Builtins
--                     , CoreLang.TempInst.GC
--                     , CoreLang.TempInst.Instantiate
--                     , CoreLang.TempInst.Interpreter
--                     , CoreLang.TempInst.Machine
--                     , CoreLang.TempInst.Stats
--                     , CoreLang.TempInst.TIM
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , fclabels
                     , haskeline
                     , mtl
                     , parsec
                     , pretty
  default-language:    Haskell2010
  default-extensions:  DuplicateRecordFields
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MonadFailDesugaring
                     , NamedFieldPuns
                     , PartialTypeSignatures
                     , TypeFamilies

  ghc-options:         -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-partial-type-signatures

executable corelang
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , corelang
                     , filepath
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

test-suite corelang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , corelang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/corelang
