name:                pukeko
version:             0.0.1
synopsis:            A toy compiler based on SPJ's "The Implementation of Functional Programming Languages".
description:         Please see README.md
homepage:            https://github.com/hurryabit/pukeko#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Huschenbett <martin.huschenbett@posteo.me>
copyright:           2017 Martin Huschenbett
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:     Pukeko.Core.Info
                     , Pukeko.Core.Syntax
                     , Pukeko.GMachine.Builtins
                     , Pukeko.GMachine.Compiler
                     , Pukeko.GMachine.GCode
                     , Pukeko.GMachine.NASM
                     , Pukeko.GMachine.PeepHole
                     , Pukeko.Language.ADT
                     , Pukeko.Language.CoreCompiler
                     , Pukeko.Language.DeadCode
                     , Pukeko.Language.FreeVars
                     , Pukeko.Language.Ident
                     , Pukeko.Language.LambdaLifter
                     , Pukeko.Language.Operator
                     , Pukeko.Language.Parser
                     , Pukeko.Language.PatternMatcher
                     , Pukeko.Language.Rewrite
                     , Pukeko.Language.Syntax
                     , Pukeko.Language.Type
                     , Pukeko.Language.TypeChecker
                     , Pukeko.Pretty
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , fclabels
                     , haskeline
                     , mtl
                     , parsec
                     , pretty
  default-language:    Haskell2010
  default-extensions:  DuplicateRecordFields
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MonadFailDesugaring
                     , NamedFieldPuns
                     , PartialTypeSignatures
                     , TypeFamilies

  ghc-options:         -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-partial-type-signatures

executable pukeko
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-partial-type-signatures
  build-depends:       base
                     , pukeko
                     , filepath
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010
  default-extensions:  MonadFailDesugaring

test-suite pukeko-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , hspec
                     , HUnit
                     , process
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hurryabit/pukeko
